# linkedin-ai-apply

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  config.yaml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
agent/: __init__.py  __main__.py  cli.py  config.py  db.py  intake_refresh.py  models.py  runlock.py  schedule.py  sheet.py
agent/browser/: easy_apply.py  external_apply.py  finders.py  forms.py  hiring_posts.py  job_page.py  search.py  session.py
agent/llm/: prompts.py  provider.py
agent/pipeline/: apply.py  discover.py  generate.py  match.py
agent/resume/: builder.py  parser.py  profile.py
agent/web/: __init__.py  runner.py  server.py
agent/web/static/: app.js  index.html  styles.css
docs/: UI_REVIEW.md
profile/: intake.example.yaml
tests/: test_action_runner.py  test_apply_button_search.py  test_apply_routing.py  test_config.py  test_db.py  test_easy_apply_scroll.py  test_external_apply.py  test_forms.py  test_generate_flow.py  test_llm_config.py  test_match_score.py  test_match_scoring.py  test_resilience.py  test_resume_parser.py  test_resume_profile.py  test_runlock.py  test_schedule.py  test_search_url.py  test_sheet.py  test_stop_action.py  test_uploads.py  test_web_serialize.py
